Fix some TODOs, rewrite api docs spec
