# src/_helpers/apiRouter.ts
@@ -17,11 +17,12 @@ apiRouter.use(express.urlencoded({ extended: false }));
 /**
  * GET /foodstuffs
  * @description Get foodstuffs list.
- * @response 200 - List of foodstuffs.
- * @responseContent {Foodstuff[]} 200.application/json
+ * @responseComponent {AuthError} 401
+ * @responseComponent {FoodstuffsListResponse} 200
+ * @security bearerAuth
  * @tag foodstuff
  */
- apiRouter.get('/foodstuffs', function(req, res) {
+ apiRouter.get('/foodstuffs', requireRole(), function(req, res) {
     let foodstuffRepository = connection.getRepository(Foodstuff);
     foodstuffRepository.find().then((foodstuffs: Foodstuff[]) => {
         res.json(foodstuffs);
@@ -31,28 +32,26 @@ apiRouter.use(express.urlencoded({ extended: false }));
 /**
  * POST /foodstuffs
  * @description Add new foodstuff.
- * @response 400 - Api request malformed.
- * @responseContent {ValidationError} 400.application/json
- * @response 200 - Add foodstuff response.
- * @responseContent {FoodstuffAdd} 200.application/json
- * @bodyContent {FoodstuffAddRequest} application/x-www-form-urlencoded
- * @bodyContent {FoodstuffAddRequest} application/json
- * @bodyRequired
+ * @responseComponent {ValidationError} 400
+ * @responseComponent {AuthError} 401
+ * @responseComponent {AddFoodstuffResponse} 200
+ * @bodyComponent {AddFoodstuffRequest}
+ * @security bearerAuth
  * @tag foodstuff
  */
- apiRouter.post('/foodstuffs', 
+ apiRouter.post('/foodstuffs', requireRole(),
     body('name').isLength({ min: 5 }),
-    body('price').isLength({ min: 5 }),
+    //body('price').isLength({ min: 5 }), TODO: add custom price validator
  function(req, res) {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
-      return res.status(400).json({ errors: errors.array() });
+        return res.status(400).json({ errors: errors.array() });
     }
 
     let foodstuff = new Foodstuff();
     foodstuff.name = req.body.name;
-    if(req.body.shortName) foodstuff.shortName = req.body.shortName;
-    if(req.body.description) foodstuff.description = req.body.description;
+    foodstuff.shortName = req.body.shortName;
+    foodstuff.description = req.body.description;
     foodstuff.price = req.body.price;
 
     connection.getRepository(Foodstuff).save(foodstuff).then((foodstuff: Foodstuff) => {
@@ -66,11 +65,12 @@ apiRouter.use(express.urlencoded({ extended: false }));
 /**
  * GET /orders
  * @description Get orders list.
- * @response 200 - List of orders.
- * @responseContent {Order[]} 200.application/json
+ * @responseComponent {AuthError} 401
+ * @responseComponent {OrdersListResponse} 200
+ * @security bearerAuth
  * @tag orders
  */
- apiRouter.get('/orders', function(req, res) {
+ apiRouter.get('/orders', requireRole(), function(req, res) {
     let orderRepository = connection.getRepository(Order);
     orderRepository.find().then((orders: Order[]) => {
         res.json(orders);
@@ -80,41 +80,29 @@ apiRouter.use(express.urlencoded({ extended: false }));
 /**
  * POST /orders
  * @description Add new order.
- * @response 400 - Api request malformed.
- * @responseContent {ValidationError} 400.application/json
- * @response 200 - Add order response.
- * @responseContent {OrderAdd} 200.application/json
- * @bodyContent {OrderAddRequest} application/json
- * @bodyRequired
+ * @responseComponent {ValidationError} 400
+ * @responseComponent {AuthError} 401
+ * @responseComponent {AddOrderResponse} 200
+ * @bodyComponent {AddOrderRequest}
+ * @security bearerAuth
  * @tag orders
  */
- apiRouter.post('/orders',
+ apiRouter.post('/orders', requireRole(),
     body('foodstuffs').isLength({ min: 5 }).custom(validateOrderFoodstuffs()),
  function(req, res) {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
-      return res.status(400).json({ errors: errors.array() });
+        return res.status(400).json({ errors: errors.array() });
     }
 
     let order = new Order();
-    order.customer = "customer";
-    order.places = 7;
-    order.tableNumber = 9;
-    order.waiter = "Paulo";
-    order.notes = "Note blablabla";
-    order.takeAway = false;
-    order.foodstuff = [
-        {
-            foodstuff: 1,
-            amount: 2,
-            notes: "nota1"
-        },
-        {
-            foodstuff: 2,
-            amount: 8,
-            notes: "nota2"
-        }
-    ];
+    order.customer = req.body.customer;
+    order.places = req.body.places;
+    order.tableNumber = req.body.tableNumber;
+    order.waiter = req.body.waiter;
+    order.notes = req.body.notes;
+    order.takeAway = req.body.takeAway;
+    order.foodstuff = req.body.foodstuffs;
 
     connection.getRepository(Order).save(order).then((order: Order) => {
         res.json({
@@ -127,11 +115,12 @@ apiRouter.use(express.urlencoded({ extended: false }));
 /**
  * GET /users
  * @description Get users list.
- * @response 200 - List of user objects.
- * @responseContent {User[]} 200.application/json
+ * @responseComponent {AuthError} 401
+ * @responseComponent {UsersListResponse} 200
+ * @security bearerAuth
  * @tag users
  */
-apiRouter.get('/users', function(req, res) {
+apiRouter.get('/users', requireRole(), function(req, res) {
     let userRepository = connection.getRepository(User);
     userRepository.find().then((users: User[]) => {
         users.forEach((u) => { delete u["password"] });
@@ -142,22 +131,20 @@ apiRouter.get('/users', function(req, res) {
 /**
  * POST /users
  * @description Create a new user.
- * @response 400 - Api request malformed.
- * @responseContent {ValidationError} 400.application/json
- * @response 200 - Add user response.
- * @responseContent {UserAdd} 200.application/json
- * @bodyContent {UserAddRequest} application/x-www-form-urlencoded
- * @bodyContent {UserAddRequest} application/json
- * @bodyRequired
+ * @responseComponent {ValidationError} 400
+ * @responseComponent {AuthError} 401
+ * @responseComponent {AddUserResponse} 200
+ * @bodyComponent {AddUserRequest}
+ * @security bearerAuth
  * @tag users
  */
-apiRouter.post('/users',
+apiRouter.post('/users', requireRole(),
     body('username').isLength({ min: 5 }),
     body('password').isLength({ min: 5 }),
 function(req, res) {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
-      return res.status(400).json({ errors: errors.array() });
+        return res.status(400).json({ errors: errors.array() });
     }
     
     let user_settings: AddUserSettings = {
@@ -179,68 +166,60 @@ function(req, res) {
 /**
  * GET /profile
  * @description Get profile info.
- * @response 401 - Auth error.
- * @responseContent {AuthErrorResponse} 401.application/json
- * @response 200 - User Object.
- * @responseContent {User} 400.application/json
+ * @responseComponent {AuthError} 401
+ * @responseComponent {ProfileResponse} 200
+ * @security bearerAuth
  * @tag user
  */
- apiRouter.get('/profile', requireRole(), function(req: any, res) {
+apiRouter.get('/profile', requireRole(), function(req: any, res) {
     res.send(req.user);
 });
 
 /**
  * POST /login
  * @description Create a new user.
- * @response 400 - Api request malformed.
- * @responseContent {ValidationError} 400.application/json
- * @response 401 - Auth error.
- * @responseContent {AuthErrorResponse} 401.application/json
- * @response 200 - Add user response.
- * @responseContent {AuthResponse} 200.application/json
- * @bodyContent {LoginRequest} application/x-www-form-urlencoded
- * @bodyContent {LoginRequest} application/json
- * @bodyRequired
+ * @responseComponent {ValidationError} 400
+ * @responseComponent {AuthError} 401
+ * @responseComponent {AuthResponse} 200
+ * @bodyComponent {LoginRequest}
  * @tag login
  */
- apiRouter.post('/login',
- body('username').isLength({ min: 5 }),
- body('password').isLength({ min: 5 }),
+apiRouter.post('/login',
+    body('username').isLength({ min: 5 }),
+    body('password').isLength({ min: 5 }),
 function(req, res) {
- const errors = validationResult(req);
- if (!errors.isEmpty()) {
-   return res.status(400).json({ errors: errors.array() });
- }
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        return res.status(400).json({ errors: errors.array() });
+    }
  
- authenticate(req.body.username, req.body.password).then((response) => {
-     delete response.user["password"];
-     res.json({
-         access_token: response.access_token,
-         user: response.user
-     });
- }).catch((err) => {
-     res.status(401).json({
-         status: 'error',
-         message: err.message
-     });
- });
+    authenticate(req.body.username, req.body.password).then((response) => {
+        delete response.user["password"];
+        res.json({
+            access_token: response.access_token,
+            user: response.user
+        });
+    }).catch((err) => {
+        res.status(401).json({
+            status: 'error',
+            message: err.message
+        });
+    });
 });
 
 /**
  * POST /validate_token
  * @description Validate JWT Access Token.
- * @response 400 - Api request malformed.
- * @responseContent {ValidationError} 400.application/json
- * @response 401 - Auth error.
- * @responseContent {AuthErrorResponse} 401.application/json
- * @response 200 - Validation Successfull response.
- * @responseContent {ValidationSuccessfull} 200.application/json
+ * @responseComponent {ValidationError} 400
+ * @responseComponent {AuthError} 401
+ * @responseComponent {TokenValidationSuccessfull} 200
+ * @bodyComponent {ValidateTokenRequest}
  * @tag login
  */
 apiRouter.post('/validate_token', body('access_token').isLength({ min: 5 }), function(req, res) {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
-      return res.status(400).json({ errors: errors.array() });
+        return res.status(400).json({ errors: errors.array() });
     }
 
     validateAccessToken(req.body.access_token).then((response) => {
@@ -259,8 +238,7 @@ apiRouter.post('/validate_token', body('access_token').isLength({ min: 5 }), fun
 /**
  * GET /version
  * @description Get server version.
- * @response 200 - Version object.
- * @responseContent {Version} 200.application/json
+ * @responseComponent {VersionResponse} 200
  */
 apiRouter.get('/version', function(req, res) {
     res.send({
@@ -271,10 +249,11 @@ apiRouter.get('/version', function(req, res) {
 /**
  * GET /logs
  * @description Get a list of logs.
- * @response 200 - Logs object.
- * @responseContent {Logs} 200.application/json
+ * @responseComponent {AuthError} 401
+ * @responseComponent {LogsResponse} 200
+ * @security bearerAuth
  */
-apiRouter.get('/logs', function(req, res) {
+apiRouter.get('/logs', requireRole(), function(req, res) {
     res.json({
         logs: Logs
     });
@@ -283,8 +262,7 @@ apiRouter.get('/logs', function(req, res) {
 /**
  * GET /ping
  * @description Reply with "pong".
- * @response 200 - pong.
- * @responseContent {Pong} 200.text/plain
+ * @responseComponent {PingResponse} 200
  */
 apiRouter.get('/ping', function(req, res) {
     res.type('text/plain');
